:hammer: [#17] fix: DTO 클래스 위치 변경